# lab1

./: README.md  class_create_configs.py  class_device_config.py  ejemplo config inicial SW  main.py  modelo_datos.yaml  pyproject.toml  requirements.txt
configs/: SW_BLD_A_int_access.cfg  SW_BLD_A_int_mgmt.cfg  SW_BLD_A_int_trunk.cfg  SW_BLD_A_int_vlan.cfg  SW_BLD_A_pvst.cfg  SW_BLD_A_vlan.cfg  SW_BLD_B_int_access.cfg  SW_BLD_B_int_mgmt.cfg  SW_BLD_B_int_vlan.cfg  SW_CORE_1_int_access.cfg  SW_CORE_1_int_mgmt.cfg  SW_CORE_1_int_portchannel.cfg  SW_CORE_1_int_trunk.cfg  SW_CORE_1_int_vlan.cfg  SW_CORE_1_pvst.cfg  SW_CORE_1_vlan.cfg  SW_CORE_2_int_access.cfg  SW_CORE_2_int_mgmt.cfg  SW_CORE_2_int_portchannel.cfg  SW_CORE_2_int_trunk.cfg  SW_CORE_2_int_vlan.cfg  SW_CORE_2_pvst.cfg  SW_CORE_2_vlan.cfg  SW_DC_1_int_access.cfg  SW_DC_1_int_mgmt.cfg  SW_DC_1_int_trunk.cfg  SW_DC_1_int_vlan.cfg  SW_DC_1_services_config.cfg  SW_IT_1_int_access.cfg  SW_IT_1_int_trunk.cfg  SW_IT_1_int_vlan.cfg
templates/: common_config.j2  int_access.j2  int_mgmt.j2  int_portchannel.j2  int_trunk.j2  int_vlan.j2  pvst.j2  services_config.j2  vlans.j2
