[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ciscoconfparse>=1.9.52",
    "jinja2>=3.1.6",
    "netmiko>=4.6.0",
    "requests>=2.32.5",
    "simple-term-menu>=1.6.6",
    "textfsm>=2.1.0",
]
